workflow ARM64 fix iteration

--- a/.github/workflows/build-layer.yml
+++ b/.github/workflows/build-layer.yml
@@ -1,5 +1,5 @@
 # filename: .github/workflows/build-layer.yml
-# version: 1.1
+# version: 1.3
 name: Build AWS Lambda Layer for x86_64 and arm64
 
 on:
@@ -9,17 +9,18 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         arch: [x86_64, arm64]
+    runs-on: ${{ matrix.arch == 'arm64' && 'ubuntu-24.04-arm64' || 'ubuntu-24.04' }}
 
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
 
-      - name: Build layer for ${{ matrix.arch }}
+      - name: Build Lambda layer for ${{ matrix.arch }}
         run: |
+          echo "Building for architecture: ${{ matrix.arch }}"
           docker build \
             --build-arg ARCH=${{ matrix.arch }} \
             --platform linux/${{ matrix.arch == 'arm64' && 'arm64' || 'amd64' }} \
@@ -28,7 +29,7 @@ jobs:
       - name: Copy ZIP from container lambda-layer-${{ matrix.arch }}
         run: |
           CID=$(docker create lambda-layer-${{ matrix.arch }})
-          docker cp "$CID:/lambda-layer-fastapi.zip" ./lambda-layer-fastapi-${{ matrix.arch }}.zip
+          docker cp "$CID:/app/lambda-layer-fastapi.zip" ./lambda-layer-fastapi-${{ matrix.arch }}.zip
           docker rm "$CID"
 
       - name: Upload artifact for ${{ matrix.arch }}
